# hashfi

./: .gitignore  README.md  TODO.md  app.py  hashfi_spread.py  hashfi_spread_manual.py  pyproject.toml  requirements.txt
hashfi/: main.py
hashfi/core/: monitor.py  session.py  shredder.py  stegano.py
hashfi/sensors/: base.py  file_sensor.py  keyboard_sensor.py  system_sensor.py
hashfi/utils/: crypto.py
hashfi/web/: app.py
hashfi/web/static/: cypherpunk.css  tools.js
hashfi/web/templates/: index.html
