[tool.poetry]
name = "hashfi"
version = "0.1.0"
description = "HashFi Sentinel - Cypherpunk privacy toolkit"
authors = ["K-Variable7"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
psutil = "*"
faker = "*"
rich = "*"

[tool.poetry.scripts]
app = "hashfi.web.app:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
